# cc-skills

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  README.md  fleet.json  ops.json
.claude-plugin/: marketplace.json
plugins/agent-browser-with-cookies/: pyproject.toml
plugins/agent-browser-with-cookies/.claude-plugin/: plugin.json
plugins/agent-browser-with-cookies/hooks/: hooks.json
plugins/agent-browser-with-cookies/scripts/: setup.sh
plugins/agent-browser-with-cookies/skills/agent-browser-with-cookies/: SKILL.md
plugins/agent-browser-with-cookies/skills/agent-browser-with-cookies/scripts/: cookies.py  touchid_gate.swift
plugins/agent-browser-with-cookies/skills/agent-browser-with-cookies/scripts/cookies_lib/: __init__.py  crypto.py  domains.py  getcookie.py  keychain.py  profiles.py  serialize.py
plugins/agent-browser-with-cookies/tests/: test_cli.py  test_crypto.py  test_domains.py  test_serialize.py
plugins/gen-image/: pyproject.toml
plugins/gen-image/.claude-plugin/: plugin.json
plugins/gen-image/skills/gen-image/: SKILL.md
plugins/gen-image/skills/gen-image/scripts/: genimage.py
plugins/gen-image/skills/gen-image/scripts/genimage_lib/: __init__.py  api.py  post.py  presets.py
plugins/gen-image/tests/: test_cli.py  test_post.py
plugins/gh-profile/: pyproject.toml
plugins/gh-profile/.claude-plugin/: plugin.json
plugins/gh-profile/skills/gh-profile/: SKILL.md
plugins/gh-profile/skills/gh-profile/reference/: actions.md  blueprint.md  data.md  widgets.md
plugins/gh-profile/skills/gh-profile/scripts/: profile.py
plugins/gh-profile/skills/gh-profile/templates/github/: summaries.config.json
plugins/gh-profile/skills/gh-profile/templates/github/scripts/: summaries.py  update_profile.py
plugins/gh-profile/skills/gh-profile/templates/github/workflows/: profile-claude-refresh.yml  profile-metrics.yml  profile-refresh.yml  profile-snake.yml
plugins/gh-profile/skills/refresh/: SKILL.md
plugins/gh-profile/tests/: conftest.py  test_digest.py  test_gates.py  test_rank.py  test_render.py  test_splice.py  test_summaries.py
plugins/gh-profile/tests/fixtures/: events.json  graphql.json  releases.json  repos.json
plugins/repo-bootstrap/: pyproject.toml
plugins/repo-bootstrap/.claude-plugin/: plugin.json
plugins/repo-bootstrap/skills/apple-certs/: SKILL.md
plugins/repo-bootstrap/skills/apple-certs/scripts/: assemble-p12.sh  check-p12-chain.sh  gen-csr.sh  verify-signing-identity.sh
plugins/repo-bootstrap/skills/repo-bootstrap/: SKILL.md
plugins/repo-bootstrap/skills/repo-bootstrap/reference/: base-conventions.md  bun-ci-and-release.md  ci-and-release.md  docs-site.md  go-ci-and-release.md  go-stack.md  hooks.md  python-stack.md  swift-ci-and-release.md  swift-stack.md
plugins/repo-bootstrap/skills/repo-bootstrap/scripts/: bootstrap.py  check-pypi-name.sh  genimages.py  resolve-identity.sh  scaffold.py  set-release-secrets.sh  verify.sh  watch-release.sh
plugins/repo-bootstrap/skills/repo-bootstrap/scripts/bootstrap/: __init__.py  common.py  drift.py  identity.py  manifest.py  pypi.py  render.py  scaffold.py  stamp.py  sync.py  trust.py  verify.py
plugins/repo-bootstrap/skills/repo-bootstrap/templates/_partials/: ask-before-assuming.md  ccx.md  code-review-response.md  parallelize.md  readme-demo-todo.md  readme-footer.md  readme-inline-tail.md  readme-opener.md  readme-use-cases.md  version-control.md  writing-plans.md
plugins/repo-bootstrap/skills/repo-bootstrap/templates/base/: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE-MIT  LICENSE-PolyForm-Noncommercial-1.0.0  README.md  STYLEGUIDE.md  gitignore
plugins/repo-bootstrap/skills/repo-bootstrap/templates/base/claude/: jj-config.toml  settings.json
plugins/repo-bootstrap/skills/repo-bootstrap/templates/bun/: README.md  STYLEGUIDE.md  bun-version  gitignore  package.json  tsconfig.json
plugins/repo-bootstrap/skills/repo-bootstrap/templates/bun/src/: index.ts
plugins/repo-bootstrap/skills/repo-bootstrap/templates/bun/tests/: hello.test.ts
plugins/repo-bootstrap/skills/repo-bootstrap/templates/extras/: superset-config.json
plugins/repo-bootstrap/skills/repo-bootstrap/templates/go/: AGENTS.md  README.md  STYLEGUIDE.md  Taskfile.yml  go-mod  goreleaser.yaml
plugins/repo-bootstrap/skills/repo-bootstrap/templates/go/claude/: settings.json
plugins/repo-bootstrap/skills/repo-bootstrap/templates/go/cmd/: daemon-main.go  main.go
plugins/repo-bootstrap/skills/repo-bootstrap/templates/go/scripts/: macos-codesign.sh  test.sh
plugins/repo-bootstrap/skills/repo-bootstrap/templates/plugin/: install-binary-layout.toml  install-binary.sh  install-binary.src.sh
plugins/repo-bootstrap/skills/repo-bootstrap/templates/python/: AGENTS.md  README.md  STYLEGUIDE.md  gitignore  great-docs.yml  pyproject.toml  python-version  secondary-STYLEGUIDE.md
plugins/repo-bootstrap/skills/repo-bootstrap/templates/swift/: AGENTS.md  Package.swift  README.md  STYLEGUIDE.md
plugins/repo-bootstrap/skills/repo-bootstrap/templates/swift-app/: AGENTS.md  README.md
plugins/repo-bootstrap/tests/: conftest.py  test_bun.py  test_drift.py  test_genimages.py  test_guides_fragments.py  test_identity.py  test_plugin_autobump.py  test_pypi.py  test_render.py  test_scaffold.py  test_swift.py  test_sync.py  test_trust.py  test_verify.py
plugins/repo-summaries/: pyproject.toml
plugins/repo-summaries/.claude-plugin/: plugin.json
plugins/repo-summaries/skills/refresh/: SKILL.md
plugins/repo-summaries/tests/: test_summaries.py
tools/fleetlib/: pyproject.toml
tools/fleetlib/fleetlib/: __init__.py  gh.py  op.py  proc.py
tools/fleetlib/tests/: test_gh.py  test_op.py  test_proc.py
tools/gd-build/: pyproject.toml
tools/gd-build/gd_build/: __init__.py  __main__.py  cli.py  fleet_assets.py  grouped_reference.py  patches.py  search_rank.py  swatch.py  titles.py
tools/gd-build/gd_build/assets/: fleet-theme.css
tools/gd-build/tests/: conftest.py  test_cli.py  test_fleet_assets.py  test_grouped_reference.py  test_patches.py  test_search_rank.py  test_swatch.py  test_type_annotations.py
(+247 files in other folders)
