# Dev/test environment for the agent-browser-with-cookies skill ITSELF.
# The shipped CLI (skills/.../scripts/cookies.py) runs standalone via its uv
# inline-deps header — this harness exists only so pytest can import the lib.
[project]
name = "agent-browser-with-cookies-dev"
version = "0.0.0"
description = "Test harness for the agent-browser-with-cookies skill engine"
requires-python = ">=3.11"

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8", "cryptography>=42"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/agent-browser-with-cookies/scripts"]
