# Dev/test environment for the gh-profile skill ITSELF.
# Nothing here ships into profile repos — those get templates/github/.
[project]
name = "gh-profile-dev"
version = "0.0.0"
description = "Test harness for the gh-profile skill engine"
requires-python = ">=3.10"

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/gh-profile/scripts", "skills/gh-profile/templates/github/scripts"]
