# Dev/test environment for the repo-bootstrap skill ITSELF.
# This is never shipped into scaffolded repos — those get templates/python/pyproject.toml.
[project]
name = "repo-bootstrap-dev"
version = "0.0.0"
description = "Test harness for the repo-bootstrap skill engine"
requires-python = ">=3.10"

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/repo-bootstrap/scripts"]
markers = [
    "uv: end-to-end tests that need the uv toolchain (deselect with -m 'not uv')",
    "go: end-to-end tests that need the go toolchain (deselect with -m 'not go')",
    "swift: end-to-end tests that need the swift toolchain (deselect with -m 'not swift')",
    "xcode: end-to-end tests that need full Xcode; minutes-slow (deselect with -m 'not xcode')",
]
