# Dev/test environment for the repo-summaries skill ITSELF.
# Nothing here ships into consumer repos — those get templates/scripts/summaries.py.
[project]
name = "repo-summaries-dev"
version = "0.0.0"
description = "Test harness for the repo-summaries sidecar module"
requires-python = ">=3.10"

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/refresh/templates/scripts"]
