[project]
name = "gd-build"
version = "0.1.0"
description = "The fleet's centralized great-docs docs-build wrapper (patches, pre_render titles, swatch fix)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gd-build = "gd_build.cli:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gd_build"
module-root = ""

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
