[project]
name = "gd-build"
version = "0.1.0"
description = "The fleet's centralized great-docs docs-build wrapper (patches, pre_render titles)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gd-build = "gd_build.cli:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gd_build"
module-root = ""

[dependency-groups]
# great-docs (with its griffe dependency) is a test-only dep: the type-annotation
# patch operates on real griffe annotation expressions, so its tests build genuine
# `griffe.Expr` trees and assert against real great-docs render internals.
dev = ["pytest>=8", "great-docs>=0.15,<0.16"]

[tool.pytest.ini_options]
testpaths = ["tests"]
