[project]
name = "gd-build"
version = "0.2.0"
description = "The fleet's centralized great-docs docs-build wrapper (patches, pre_render titles)"
requires-python = ">=3.12"
dependencies = []

# Content-only repos (no Python package, so no project venv holding great-docs) install
# `gd-build[content]` in CI: this pin is the sole source of truth for the great-docs version
# a module-less build resolves, and it must stay inside the patches' [0.15, 0.16) window
# (gd_build/patches.py::_within_window) or the fleet footer/CSS patches self-retire to stock.
# Python repos keep installing bare `gd-build` and reuse their own synced great-docs.
[project.optional-dependencies]
content = ["great-docs>=0.15,<0.16"]

[project.scripts]
gd-build = "gd_build.cli:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gd_build"
module-root = ""

[dependency-groups]
# great-docs (with its griffe dependency) is a test-only dep: the type-annotation
# patch operates on real griffe annotation expressions, so its tests build genuine
# `griffe.Expr` trees and assert against real great-docs render internals.
dev = ["pytest>=8", "great-docs>=0.15,<0.16"]

[tool.pytest.ini_options]
testpaths = ["tests"]
